--- a/recommender/KafkaStreaming/pom.xml
+++ b/recommender/KafkaStreaming/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>recommender</artifactId>
-        <groupId>com.atguigu</groupId>
+        <groupId>com.iss</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -32,7 +32,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.atguigu.kafkastream.Application</mainClass>
+                            <mainClass>com.iss.kafkastream.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
