--- a/flume-custom/flume.conf
+++ b/flume-custom/flume.conf
@@ -5,7 +5,7 @@ agent.sinks = kafkasink
 # For each one of the sources, the type is defined
 agent.sources.exectail.type = exec
 # 下面这个路径是需要收集日志的绝对路径，改为自己的日志目录
-agent.sources.exectail.command = tail –f /usr/local/tomcat/webapps/ROOT/WEB-INF/classes/agent.log
+agent.sources.exectail.command = tail -f /logs/agent.log
 agent.sources.exectail.interceptors=i1
 agent.sources.exectail.interceptors.i1.type=regex_filter
 # 定义日志过滤前缀的正则
@@ -16,7 +16,7 @@ agent.sources.exectail.channels = memoryChannel
 # Each sink's type must be defined
 agent.sinks.kafkasink.type = org.apache.flume.sink.kafka.KafkaSink
 agent.sinks.kafkasink.kafka.topic = log
-agent.sinks.kafkasink.kafka.bootstrap.servers = localhost:9092
+agent.sinks.kafkasink.kafka.bootstrap.servers = kafka-local:9092
 agent.sinks.kafkasink.kafka.producer.acks = 1
 agent.sinks.kafkasink.kafka.flumeBatchSize = 20
 
