--- a/flume-custom/flume.conf
+++ b/flume-custom/flume.conf
@@ -16,12 +16,20 @@ agent.sources.exectail.channels = memoryChannel
 # Each sink's type must be defined
 agent.sinks.kafkasink.type = org.apache.flume.sink.kafka.KafkaSink
 agent.sinks.kafkasink.kafka.topic = log
-agent.sinks.kafkasink.kafka.bootstrap.servers = kafka-local:9092
+agent.sinks.kafkasink.kafka.bootstrap.servers = kafka-local:9093
 agent.sinks.kafkasink.kafka.producer.acks = 1
 agent.sinks.kafkasink.kafka.flumeBatchSize = 20
 
 #Specify the channel the sink should use
 agent.sinks.kafkasink.channel = memoryChannel
+agent.sinks.kafkasink.kafka.producer.batch.size           = 8192
+agent.sinks.kafkasink.kafka.producer.linger.ms            = 10
+agent.sinks.kafkasink.kafka.producer.request.timeout.ms   = 60000
+agent.sinks.kafkasink.kafka.producer.max.block.ms         = 120000
+
+# 容错和重试
+agent.sinks.kafkasink.kafka.producer.retries              = 5
+agent.sinks.kafkasink.kafka.producer.retry.backoff.ms     = 200
 
 # Each channel's type is defined.
 agent.channels.memoryChannel.type = memory
