feat: add main architecture of software

--- a/flume-custom/flume.conf
+++ b/flume-custom/flume.conf
@@ -1,25 +1,40 @@
-# flume.conf
-# Define the agent name
-a1.sources = r1
-a1.sinks = k1
-a1.channels = c1
+agent.sources = exectail
+agent.channels = memoryChannel
+agent.sinks = kafkasink
 
-# Describe/configure the source
-a1.sources.r1.type = netcat
-a1.sources.r1.bind = 0.0.0.0
-a1.sources.r1.port = 41414
+# For each one of the sources, the type is defined
+agent.sources.exectail.type = exec
+# 下面这个路径是需要收集日志的绝对路径，改为自己的日志目录
+agent.sources.exectail.command = tail -f /logs/agent.log
+agent.sources.exectail.interceptors=i1
+agent.sources.exectail.interceptors.i1.type=regex_filter
+# 定义日志过滤前缀的正则
+agent.sources.exectail.interceptors.i1.regex=.+PRODUCT_RATING_PREFIX.+
+# The channel can be defined as follows.
+agent.sources.exectail.channels = memoryChannel
 
-# Describe the sink
-a1.sinks.k1.type = org.apache.flume.sink.kafka.KafkaSink
-a1.sinks.k1.kafka.bootstrap.servers = kafka-ave:9092
-a1.sinks.k1.kafka.topic = test-topic
-a1.sinks.k1.kafka.producer.acks = 1
+# Each sink's type must be defined
+agent.sinks.kafkasink.type = org.apache.flume.sink.kafka.KafkaSink
+agent.sinks.kafkasink.kafka.topic = log
+agent.sinks.kafkasink.kafka.bootstrap.servers = kafka-local:9093
+agent.sinks.kafkasink.kafka.producer.acks = 1
+agent.sinks.kafkasink.kafka.flumeBatchSize = 20
 
-# Describe the channel
-a1.channels.c1.type = memory
-a1.channels.c1.capacity = 1000
-a1.channels.c1.transactionCapacity = 100
+#Specify the channel the sink should use
+agent.sinks.kafkasink.channel = memoryChannel
+agent.sinks.kafkasink.kafka.producer.batch.size           = 8192
+agent.sinks.kafkasink.kafka.producer.linger.ms            = 10
+agent.sinks.kafkasink.kafka.producer.request.timeout.ms   = 60000
+agent.sinks.kafkasink.kafka.producer.max.block.ms         = 120000
 
-# Bind the source and sink to the channel
-a1.sources.r1.channels = c1
-a1.sinks.k1.channel = c1
+# 容错和重试
+agent.sinks.kafkasink.kafka.producer.retries              = 5
+agent.sinks.kafkasink.kafka.producer.retry.backoff.ms     = 200
+
+# Each channel's type is defined.
+agent.channels.memoryChannel.type = memory
+
+# Other config values specific to each type of channel(sink or source)
+# can be defined as well
+# In this case, it specifies the capacity of the memory channel
+agent.channels.memoryChannel.capacity = 10000
