--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - 'redis_data:/bitnami/redis/data'
 
   mongo-local:
-    image: circleci/mongo
+    image: mongo:4.4
     container_name: mongo-local
     ports:
       - "27017:27017"
@@ -126,6 +126,7 @@ services:
 
   azkaban:
     image: rea1shane/azkaban-solo-server:3.90.0
+    platform: linux/amd64
     container_name: azkaban-local
     ports:
       - "8089:8081"
